# dsp

./: .clang-tidy  AllPass.h  Buffer.h  CMakeLists.txt  Context.h  Delay.h  DownSampler.h  FIRFilter.h  FastMath.h  Filter.h  IIRFilter.h  Kernel.h  LFO.h  Lanczos.h  Lut.h  MultiRate.h  Noise.h  SIMD.h  Signal.h  Smoother.h  TapeDelay.h  Utils.h  VAFilters.h  Window.h
bench/: AllPass.cpp  CMakeLists.txt  FIRFilter.cpp  Springs.cpp  TapeDelay.cpp  VAFilters.cpp
examples/filters/: CMakeLists.txt  Filters.cpp
examples/springs/: CMakeLists.txt  Springs.cpp  Springs.h
examples/tapedelay/: CMakeLists.txt  TapeDelay.cpp  TapeDelay.h
include/dsp/: AdaptiveFilter.h  AllPass.h  Autocorrelation.h  Buffer.h  Context.h  Delay.h  Enveloppe.h  FIRFilter.h  FastMath.h  Hadamard.h  IIRFilter.h  Interpolation.h  Kernel.h  LFO.h  LinAlg.h  LinearAlgebra.h  Lut.h  MultiRate.h  MultiVal.h  Noise.h  OnePole.h  Orthogonal.h  PitchShift.h  RMS.h  SIMD.h  Signal.h  Smoother.h  Stack.h  TapeDelay.h  Utils.h  VAFilters.h  Window.h  Windows.h  ZeroCrossing.h
include/dsp/cpu/: defines.h  infos.h
include/dsp/gcem/: gcem.h
include/dsp/simd/: multi.h  simd.h  simd_aarch64.h  simd_arm.h  simd_default.h  simd_math.h  simd_x86_64.h
processors/: CMakeLists.txt  SC.cpp  SC.h
processors/adaptive/: Adaptive.sc  Adaptive_SC.cpp  Adaptive_SC.h  CMakeLists.txt
processors/filters/: CMakeLists.txt  Filters.cpp  Filters.sc  Filters_SC.cpp
processors/reverb/: CMakeLists.txt  Reverb.cpp  Reverb.h  Reverb.s
processors/springs/: CMakeLists.txt  Springs.cpp  Springs.h  Springs.sc  SpringsDefines.h  Springs_SC.cpp  Springs_SC.h  Springs_avx2.cpp
processors/springs/avx2/: Springs.cpp  Springs_SC.cpp
processors/tapedelay/: CMakeLists.txt  TapeDelay.cpp  TapeDelay.h  TapeDelay.sc  TapeDelayDefines.h  TapeDelay_SC.cpp  TapeDelay_SC.h
processors/tapedelay/avx2/: TapeDelay.cpp  TapeDelay_SC.cpp
processors/voicebox/: CMakeLists.txt  VoiceBox.cpp  VoiceBox.h  VoiceBox.sc  VoiceBox_SC.cpp  VoiceBox_SC.h
tests/: AdaptiveFilter.cpp  AllPass.cpp  Autocorrelation.cpp  Buffer.cpp  CMakeLists.txt  Context.cpp  Delay.cpp  Enveloppe.cpp  FIRFilter.cpp  FastMath.cpp  Hadamard.cpp  IIRFilter.cpp  Interpolation.cpp  Kernel.cpp  LFO.cpp  LinAlg.cpp  LinearAlgebra.cpp  MultiRate.cpp  Noise.cpp  OnePole.cpp  Orthogonal.cpp  PitchShift.cpp  RMS.cpp  SIMD.cpp  Signal.cpp  Smoother.cpp  VAFilters.cpp  Window.cpp  Windows.cpp  ZeroCrossing.cpp  simd.cpp
